--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -2,6 +2,8 @@
 
 	* cl.texi (Organization): More details on cl-lib.el versus cl.el.
 	(Setf Extensions): Remove `apply' setf since it seems to be disabled.
+	(Customizing Setf): Move contents to "Obsolete Setf Customization".
+	(Modify Macros, Multiple Values): Remove mentions of obsolete feature.
 
 2012-10-28  Glenn Morris  <rgm@gnu.org>
 
