--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -3,7 +3,8 @@
 	* cl.texi (Organization): More details on cl-lib.el versus cl.el.
 	(Setf Extensions): Remove `apply' setf since it seems to be disabled.
 	(Customizing Setf): Move contents to "Obsolete Setf Customization".
-	(Modify Macros, Multiple Values): Remove mentions of obsolete feature.
+	(Modify Macros, Multiple Values, Other Clauses):
+	Remove mentions of obsolete features.
 	(Obsolete Setf Customization): Don't mention `apply' setf.
 
 2012-10-28  Glenn Morris  <rgm@gnu.org>
