--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-10-29  Chong Yidong  <cyd@gnu.org>
 
+	* thingatpt.el (thing-at-point): Doc fix (Bug#12691).
+
 	* imenu.el (imenu): Inhibit push-mark message (Bug#12726).
 
 	* face-remap.el (face-remap-add-relative): Handle the case where a
