Avoid a misleading message on C-h C-a.
* lisp/startup.el (startup-echo-area-message): New arg.
(fancy-about-screen): Avoid a misleading message.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-29  Chong Yidong  <cyd@gnu.org>
 
+	* startup.el (startup-echo-area-message): New arg.
+	(fancy-about-screen): Avoid a misleading message (Bug#12680).
+
 	* thingatpt.el (thing-at-point): Doc fix (Bug#12691).
 
 	* imenu.el (imenu): Inhibit push-mark message (Bug#12726).
