--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-29  Chong Yidong  <cyd@gnu.org>
+
+	* thingatpt.el (number-at-point): Apply a thing-at-point property.
+
 2012-10-29  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* vc/diff-mode.el (diff-context->unified): Don't get confused by "hunk
