Doc and manual updates for cl-letf and letf Fixes: debbugs:12760
* doc/misc/cl.texi (Modify Macros): Update for cl-letf changes.
(Obsolete Lexical Macros): Say a little more about letf/cl-letf.

* lisp/emacs-lisp/cl.el (letf): Doc fix. 

* etc/NEWS: Related edit.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-30  Glenn Morris  <rgm@gnu.org>
+
+	* cl.texi (Modify Macros): Update for cl-letf changes.
+	(Obsolete Lexical Macros): Say a little more about letf/cl-letf.
+
 2012-10-29  Glenn Morris  <rgm@gnu.org>
 
 	* cl.texi (Organization): More details on cl-lib.el versus cl.el.
