--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-30  Glenn Morris  <rgm@gnu.org>
+
+	* variables.texi (Generalized Variables): Fix typo.
+
 2012-10-30  Chong Yidong  <cyd@gnu.org>
 
 	* symbols.texi (Symbol Plists): Document function-get.
